netcfg (1.92) UNRELEASED; urgency=low

  * netcfg-common.c: suppress unused warnings on hurd

 -- Philipp Kern <pkern@debian.org>  Wed, 19 Sep 2012 13:50:07 +0200

netcfg (1.91) unstable; urgency=low

  [ Philipp Kern ]
  * Remove DHCPv6 DUID-LL generation.
  * static.c: Fix call to deconfigure_network on kfreebsd.

  [ Updated translations ]
  * Arabic (ar.po) by Ossama Khayat
  * Bulgarian (bg.po) by Damyan Ivanov
  * Czech (cs.po) by Miroslav Kure
  * German (de.po) by Holger Wansing
  * Estonian (et.po) by Mattias Põldaru
  * Persian (fa.po) by Hamid
  * French (fr.po) by Christian Perrier
  * Hebrew (he.po) by Omer Zak
  * Icelandic (is.po) by Sveinn í Felli
  * Italian (it.po) by Milo Casagrande
  * Japanese (ja.po) by Kenshi Muto
  * Kazakh (kk.po) by Baurzhan Muftakhidinov
  * Punjabi (Gurmukhi) (pa.po) by A S Alam
  * Polish (pl.po) by Michał Kułach
  * Portuguese (pt.po) by Miguel Figueiredo
  * Russian (ru.po) by Yuri Kozlov
  * Slovak (sk.po) by Ivan Masár
  * Slovenian (sl.po) by Vanja Cvelbar
  * Turkish (tr.po) by Mert Dirik
  * Uyghur (ug.po) by Sahran
  * Traditional Chinese (zh_TW.po) by Ｖ字龍 | Vdragon

 -- Philipp Kern <pkern@debian.org>  Wed, 19 Sep 2012 12:04:19 +0200

netcfg (1.90) unstable; urgency=low

  [ Philipp Kern ]
  * netcfg.h: drop ip6-localnet (obsolete)
  * netcfg.h: drop ip6-mcastprefix (no need for it to be in /etc/hosts)
  * netcfg-common.c (is_layer3_qeth): fix off-by-one, introduce a constant

  * Fully support installation over IPv6. (Closes: #231003)

  [ Matt Palmer ]
  * Pull NULL_IPADDRESS out into a global constant
  * Refactor out some program-global variables
  * Only flush address families we manage
  * Remove global variable netcfg_progress_displayed
  * Remove gateway from being a global var, and turn it into a string
  * Make nameserver_array a local, and an array of strings
  * Move the rest of the static-specific globals into functions
  * Convert all remaining in_addr variables to strings